# r-python

./: Cargo.toml  README.md
docs/: AI_ASSISTED_REFACTORING_SESSION.md  PARSER.md  PRELUDE.md  ROBUSTEZ_PRETTY_PRINT.md  environment.md  type_checker.md
docs/refactoring/: REFACTORING_REPORT.md
examples/: factorial.rpy  hello_io.rpy  pp_bench.rs  pp_timing.rs  rpython_test.txt
src/: lib.rs  main.rs  parser.rs  prelude.rs
src/environment/: environment.rs
src/interpreter/: expression_eval.rs  interpreter.rs  mod.rs  statement_execute.rs
src/ir/: ast.rs
src/parser/: keywords.rs  mod.rs  parser.rs  parser_common.rs  parser_expr.rs  parser_stmt.rs  parser_type.rs
src/pretty_print/: README.md  REFACTORING_LOG.md  mod.rs  pretty_astatements.rs  pretty_expressions.rs  pretty_functions.rs  pretty_print.rs  pretty_statements.rs  pretty_type.rs
src/stdlib/: README.md  mod.rs  standard_library.rs
src/tc/: type_checker.rs
src/type_checker/: expression_type_checker.rs  mod.rs  statement_type_checker.rs
tests/: parser_tests.rs  pretty_print_tests.rs
