[package]
name = "r-python"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.0"
approx = "0.5.1"
once_cell = "1.10"
indexmap = "2.2"
predicates = "3.1.3"
assert_cmd = "2.0.17"

[features]
# Ativar contadores de instrumentação do pretty printer
pp-profile = []
# Habilita cache experimental para resultados de flatten (memoization estrutural)
pp-flatten-cache = []
# Mede duração do render do pretty printer e expõe função com métricas
pp-timing = []
